// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The values page should render the same based on URL parameters for honor 1`] = `
Array [
  <h1
    className="css-og6pbr"
  >
    Reflection: 
    Honor
  </h1>,
  <div
    className="css-t5u34"
  >
    <h1>
      Army
    </h1>
    <p>
      Live up to Army values [...] Honor is a matter of carrying out, acting, and living the values of respect, duty, loyalty, selfless service, integrity and personal courage in everything you do.
    </p>
  </div>,
  <div
    className="css-t5u34"
  >
    <h1>
      Marines / Navy
    </h1>
    <p>
      The quality of maturity, dedication, trust, and dependability that commits Marines to act responsibly; to be accountable for actions; to fulfill obligations; and to hold others accountable for their actions.
    </p>
  </div>,
  <input
    className="css-zoozs3"
    placeholder="What does honor mean to you?"
  />,
  <button
    className="css-1pjsjw8"
  >
    Save
  </button>,
]
`;

exports[`The values page should render the same based on URL parameters for integrity 1`] = `
Array [
  <h1
    className="css-og6pbr"
  >
    Reflection: 
    Integrity
  </h1>,
  <div
    className="css-t5u34"
  >
    <h1>
      U.S. Air Force
    </h1>
    <p>
      Integrity is the adherence to a strong moral code and consistency in one’s actions and values [...] Airmen should be guided by a deeply held sense of honor, not one of personal comfort or uncontrolled selfish appetites.
    </p>
  </div>,
  <div
    className="css-t5u34"
  >
    <h1>
      U.S. Army
    </h1>
    <p>
      Do what’s right, legally and morally. Integrity is a quality you develop by adhering to moral principles. It requires that you do and say nothing that deceives others. As your integrity grows, so does the trust others place in you […] and, finally, the fundamental acceptance of yourself.
    </p>
  </div>,
  <div
    className="css-t5u34"
  >
    <h1>
      U.S. Coast Guard
    </h1>
    <p>
      Integrity is our standard. We demonstrate uncompromising ethical conduct and moral behavior in all of our personal actions. We are loyal and accountable to the public trust.
    </p>
  </div>,
  <input
    className="css-zoozs3"
    placeholder="What does integrity mean to you?"
  />,
  <button
    className="css-1pjsjw8"
  >
    Save
  </button>,
]
`;

exports[`The values page should render the same based on URL parameters for loyalty 1`] = `
Array [
  <h1
    className="css-og6pbr"
  >
    Reflection: 
    Loyalty
  </h1>,
  <div
    className="css-t5u34"
  >
    <h1>
      U.S. Army
    </h1>
    <p>
      Bear true faith and allegiance to the U.S. Constitution, the Army, your unit and other Soldiers. Bearing true faith and allegiance is a matter of believing in and devoting yourself to something or someone … By wearing the uniform of the U.S. Army you are expressing your loyalty. And by doing your share, you show your loyalty to your unit.
    </p>
  </div>,
  <input
    className="css-zoozs3"
    placeholder="What does loyalty mean to you?"
  />,
  <button
    className="css-1pjsjw8"
  >
    Save
  </button>,
]
`;

exports[`The values page should render the same based on URL parameters for respect 1`] = `
Array [
  <h1
    className="css-og6pbr"
  >
    Reflection: 
    Respect
  </h1>,
  <div
    className="css-t5u34"
  >
    <h1>
      Army
    </h1>
    <p>
      Treat people as they should be treated [...] Respect is what allows us to appreciate the best in other people. Respect is trusting that all people have done their jobs and fulfilled their duty.
    </p>
  </div>,
  <input
    className="css-zoozs3"
    placeholder="What does respect mean to you?"
  />,
  <button
    className="css-1pjsjw8"
  >
    Save
  </button>,
]
`;
